Fix spacing of search box on mobile

--- a/mnd/static/css/style.css
+++ b/mnd/static/css/style.css
@@ -148,6 +148,11 @@ footer {
     margin-left: 3rem;
 }
 
+.search {
+    margin-top: 8px;
+    margin-left: 25px;
+}
+
 /* Make date column in indexes slightly narrower than normal col-2 */
 .chronology.col-2 {
     width: 13%;
